--- a/TileLinkTrafficGenerator-F446/TileLinkTrafficGenerator-F446.ioc
+++ b/TileLinkTrafficGenerator-F446/TileLinkTrafficGenerator-F446.ioc
@@ -6,8 +6,9 @@ Mcu.Family=STM32F4
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
 Mcu.IP2=SYS
-Mcu.IP3=USART2
-Mcu.IPNb=4
+Mcu.IP3=TIM4
+Mcu.IP4=USART2
+Mcu.IPNb=5
 Mcu.Name=STM32F446R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
@@ -15,6 +16,7 @@ Mcu.Pin1=PC0
 Mcu.Pin10=PA8
 Mcu.Pin11=PA13
 Mcu.Pin12=PA14
+Mcu.Pin13=PB6
 Mcu.Pin2=PC1
 Mcu.Pin3=PA0-WKUP
 Mcu.Pin4=PA1
@@ -23,7 +25,7 @@ Mcu.Pin6=PA3
 Mcu.Pin7=PA4
 Mcu.Pin8=PA5
 Mcu.Pin9=PB0
-Mcu.PinsNb=13
+Mcu.PinsNb=14
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F446RETx
@@ -39,6 +41,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
+NVIC.TIM4_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0-WKUP.GPIOParameters=GPIO_Label
 PA0-WKUP.GPIO_Label=TL_MISO_Ready
@@ -70,6 +73,7 @@ PB0.GPIOParameters=GPIO_Label
 PB0.GPIO_Label=TL_MOSI_Ready
 PB0.Locked=true
 PB0.Signal=GPIO_Input
+PB6.Signal=S_TIM4_CH1
 PC0.GPIOParameters=GPIO_Label
 PC0.GPIO_Label=TL_MOSI_Data
 PC0.Locked=true
@@ -108,7 +112,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_TIM4_Init-TIM4-false-HAL-true
 RCC.AHBFreq_Value=160000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 RCC.APB1Freq_Value=40000000
@@ -148,6 +152,10 @@ RCC.VCOInputFreq_Value=2000000
 RCC.VCOOutputFreq_Value=320000000
 RCC.VCOSAIInputFreq_Value=1000000
 RCC.VCOSAIOutputFreq_Value=192000000
+SH.S_TIM4_CH1.0=TIM4_CH1,Input_Capture1_from_TI1
+SH.S_TIM4_CH1.ConfNb=1
+TIM4.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
+TIM4.IPParameters=Channel-Input_Capture1_from_TI1
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
 board=custom
