--- a/TileLinkTrafficGenerator-F446/TileLinkTrafficGenerator-F446.ioc
+++ b/TileLinkTrafficGenerator-F446/TileLinkTrafficGenerator-F446.ioc
@@ -6,9 +6,10 @@ Mcu.Family=STM32F4
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
 Mcu.IP2=SYS
-Mcu.IP3=TIM4
-Mcu.IP4=USART2
-Mcu.IPNb=5
+Mcu.IP3=TIM1
+Mcu.IP4=TIM4
+Mcu.IP5=USART2
+Mcu.IPNb=6
 Mcu.Name=STM32F446R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
@@ -17,6 +18,7 @@ Mcu.Pin10=PA8
 Mcu.Pin11=PA13
 Mcu.Pin12=PA14
 Mcu.Pin13=PB6
+Mcu.Pin14=VP_TIM1_VS_ClockSourceINT
 Mcu.Pin2=PC1
 Mcu.Pin3=PA0-WKUP
 Mcu.Pin4=PA1
@@ -25,7 +27,7 @@ Mcu.Pin6=PA3
 Mcu.Pin7=PA4
 Mcu.Pin8=PA5
 Mcu.Pin9=PB0
-Mcu.PinsNb=14
+Mcu.PinsNb=15
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F446RETx
@@ -65,10 +67,8 @@ PA4.Locked=true
 PA4.Signal=GPIO_Input
 PA5.Locked=true
 PA5.Signal=GPIO_Output
-PA8.GPIOParameters=GPIO_Label
-PA8.GPIO_Label=TL_Clk
 PA8.Locked=true
-PA8.Signal=GPIO_Output
+PA8.Signal=S_TIM1_CH1
 PB0.GPIOParameters=GPIO_Label
 PB0.GPIO_Label=TL_MOSI_Ready
 PB0.Locked=true
@@ -152,11 +152,23 @@ RCC.VCOInputFreq_Value=2000000
 RCC.VCOOutputFreq_Value=320000000
 RCC.VCOSAIInputFreq_Value=1000000
 RCC.VCOSAIOutputFreq_Value=192000000
+SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1
+SH.S_TIM1_CH1.ConfNb=1
 SH.S_TIM4_CH1.0=TIM4_CH1,Input_Capture1_from_TI1
 SH.S_TIM4_CH1.ConfNb=1
+TIM1.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM1.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period,Pulse-PWM Generation1 CH1,OCPolarity_1,OCMode_PWM-PWM Generation1 CH1
+TIM1.OCMode_PWM-PWM\ Generation1\ CH1=TIM_OCMODE_PWM2
+TIM1.OCPolarity_1=TIM_OCPOLARITY_HIGH
+TIM1.Period=999
+TIM1.Prescaler=159
+TIM1.Pulse-PWM\ Generation1\ CH1=499
 TIM4.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
-TIM4.IPParameters=Channel-Input_Capture1_from_TI1
+TIM4.ICPolarity_CH1=TIM_INPUTCHANNELPOLARITY_RISING
+TIM4.IPParameters=Channel-Input_Capture1_from_TI1,ICPolarity_CH1
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
+VP_TIM1_VS_ClockSourceINT.Mode=Internal
+VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 board=custom
 isbadioc=false
