--- a/TileLinkTrafficAdapter-F446/TileLinkTrafficAdapter-F446.ioc
+++ b/TileLinkTrafficAdapter-F446/TileLinkTrafficAdapter-F446.ioc
@@ -193,7 +193,8 @@ TIM1.Pulse-PWM\ Generation1\ CH1=499
 TIM4.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
 TIM4.ICPolarity_CH1=TIM_INPUTCHANNELPOLARITY_RISING
 TIM4.IPParameters=Channel-Input_Capture1_from_TI1,ICPolarity_CH1
-USART2.IPParameters=VirtualMode
+USART2.BaudRate=2000000
+USART2.IPParameters=VirtualMode,BaudRate
 USART2.VirtualMode=VM_ASYNC
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
